# akan-speech-lab

./: .gitignore  README.md  app.py  pyproject.toml
docs/: ARTIFACT_VERSIONING.md  ASR_MILESTONE1_EXPRESSIVE.md  ASR_PIPELINE_LOOP.md  ASR_RESEARCH_SPINE.md  ASR_ROUND2_RESULTS.md  ASR_ROUND2_SPEC.md  ASR_ROUND3_LORA_RESULTS.md  ASR_ROUND3_LORA_SPEC.md  ASR_V02_RESULT.md  ASR_V03_RESULT.md  ASR_V04_RESULT.md  ASR_V05_RESULT.md  ASR_V06_MANIFEST.md  GNLP_MANIFEST_AUDIT_V05.md  ROADMAP.md  TTS_RESEARCH_AND_EXECUTION.md  benchmark.md  datasets.md  evaluation.md  experiments.md  medkit_ui_lessons.md  modal.md  old_waxal_notebook_findings.md  preprocessing.md  training.md
evals/: baselines.yaml  waxal_aka_benchmark_v1.json
modal_jobs/: asr_eval.py  asr_round2.py  asr_round3_lora.py  asr_train.py  asr_v01.py  asr_v04_waxal.py  asr_v05_gnlp.py  asr_v06_clean_replay.py  tts_eval.py  tts_train.py
scripts/: analyze_decoder_comparison.py  asr_pipeline.py  audit_gnlp_manifest.py  build_asr_review_packet.py  build_asr_v06_manifest.py  build_hf_review_artifact.py  build_tts_prompt_suite.py  build_waxal_metadata.py  build_waxal_round2_manifest.py  build_waxal_viewer_manifest.py  cache_hf_model.py  compare_asr_candidates.py  eval_asr_manifest.py  freeze_waxal_benchmark.py  inspect_manifest.py  inspect_waxal_viewer.py  materialize_manifest_audio.py  modal_asr_v01_jobs.py  modal_asr_v04_waxal_jobs.py  modal_asr_v05_gnlp_jobs.py  modal_asr_v06_clean_replay_jobs.py  modal_round2_jobs.py  modal_round3_jobs.py  modal_tts_jobs.py  prepare_afrispeech.py  prepare_ghana_nlp.py  prepare_waxal.py  render_asr_report.py  review_old_notebook.py  run_asr_pipeline.py  sanitize_asr_v01.py  smoke_test.py
tests/: test_asr_artifacts.py  test_asr_pipeline.py  test_asr_sanitize.py  test_audio_materialize.py  (+18 more)
(+40 files in other folders)
