[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akan-speech-lab"
version = "0.1.0"
description = "Akan ASR/TTS fine-tuning and evaluation infrastructure."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=3.0.0",
  "evaluate>=0.4.2",
  "gradio>=5.49,<6",
  "jiwer>=3.0.4",
  "librosa>=0.10.2",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "soundfile>=0.12.1",
  "torch>=2.7.1,<2.8",
  "transformers>=4.53.2,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]
modal = [
  "modal>=0.73.0",
  "huggingface_hub>=0.24.0",
  "accelerate>=0.33.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["references/old-whisper-waxal-finetune"]

[tool.pytest.ini_options]
testpaths = ["tests"]
